# cooklang-py

./: LICENSE  README.md  pyproject.toml
cooklang/: cooklang.lark  parser.py
tests/: canonical.yaml  test_canonicals.py
